tests/NormalTests/paczka1/fuzzy1/38857352.err
Error in line 2: cGbid0z S60 35,9
Error in line 8: cGbid0z A148 89,1
Error in line 6: ko03S2 A789 87,6
Error in line 12: cGbid0z S60 22,6
Error in line 23: 2pMUbg S60 64,2
Error in line 36: gGsOJ S60 40,3
